feat(api): confirmed incoming borrow request
